oci/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  annotations:
    linkerd.io/inject: enabled
