oci/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: headscale
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-derp
  namespace: headscale
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "${AKS_NODE_RG}"
    service.beta.kubernetes.io/azure-load-balancer-ipv4: "${PUBLIC_IP_V4}"
    service.beta.kubernetes.io/azure-load-balancer-ipv6: "${PUBLIC_IP_V6}"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: headscale
  ports:
    - name: derp
      port: 3478
      targetPort: derp
      protocol: UDP
